--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <body>
         <header>
             <h1>WickedWx</h1>
-            <img src="https://media.istockphoto.com/id/531535355/photo/four-season-tree-photo-manipulation-magical-nature.jpg?s=1024x1024&w=is&k=20&c=iZKVWUmMuu4eDq72ynZ7hXAkF48kn3YstQMDC5W0L-k=">
+            <img src="https://images.photowall.com/products/49098/tree-of-four-seasons.jpg?h=699&q=85">
         </header>
         <main>
         </main>
