--- a/index.html
+++ b/index.html
@@ -13,17 +13,38 @@
             crossorigin="anonymous"
         />
     </head>
+    <style>
+        body {
+  background-color: hotpink;
+}  
+    </style>
 
-    <body>
+    <body> 
         <header>
+            <style>
+                h1 {
+  color: black;
+  margin-left: 800px;
+}
+</style>
             <h1>WickedWx</h1>
+            <style>
+                img {
+                    margin-inline-start: 500px;
+                }
+            </style>
             <img src="https://images.photowall.com/products/49098/tree-of-four-seasons.jpg?h=699&q=85">
         </header>
         <main>
         </main>
         <footer>
-            <p>Made in Collaboration by:</p>
-            <p>Sarah Stewart, Matthew Franklin, Bruce Millspaugh, Margaux Glovier, Jacob Garland</p>
+            <style>
+                p {
+                    margin-left: 525px;
+                }
+                
+            </style>
+            <p>Made in Collaboration by: Sarah Stewart, Matthew Franklin, Bruce Millspaugh, Margaux Glovier, Jacob Garland</p>
         </footer>
     </body>
 </html>
