Configuring img full backround without px

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     </head>
     <style>
         body {
-  background-color: hotpink;
+background: "https://images.photowall.com/products/49098/tree-of-four-seasons.jpg?h=699&q=85" 1350px;
 }  
     </style>
 
