Margins complete and size of header

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     </head>
     <style>
         body {
-background: "https://images.photowall.com/products/49098/tree-of-four-seasons.jpg?h=699&q=85" 1350px;
+        background-color: bisque;
 }  
     </style>
 
@@ -24,7 +24,9 @@ background: "https://images.photowall.com/products/49098/tree-of-four-seasons.jp
             <style>
                 h1 {
   color: black;
-  margin-left: 800px;
+  margin-left: 725px;
+  margin-top: 2%;
+  font-size: 500%;
 }
 </style>
             <h1>WickedWx</h1>
