basic dropdown menu for weather types

--- a/index.html
+++ b/index.html
@@ -38,6 +38,14 @@
             <img src="https://images.photowall.com/products/49098/tree-of-four-seasons.jpg?h=699&q=85">
         </header>
         <main>
+            <label for="weather">What would you like to know?</label>
+
+<select name="weather" id="weather">
+  <option value="snow">Snow</option>
+  <option value="rain">Rain</option>
+  <option value="hail">Hail</option>
+  <option value="uv">High UV</option>
+</select>
         </main>
         <footer>
             <style>
