centered the dropdown

--- a/index.html
+++ b/index.html
@@ -38,6 +38,8 @@
             <img src="https://images.photowall.com/products/49098/tree-of-four-seasons.jpg?h=699&q=85">
         </header>
         <main>
+            
+            <center>
             <label for="weather">What would you like to know?</label>
 
 <select name="weather" id="weather">
@@ -46,6 +48,8 @@
   <option value="hail">Hail</option>
   <option value="uv">High UV</option>
 </select>
+
+</center>
         </main>
         <footer>
             <style>
