--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     </head>
     <style>
         body {
-        background-color: bisque;
+        background-color: rgb(196, 238, 255);
 }  
     </style>
 
