--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <!doctype html>
+<meta name="viewport" content="width=device-width, initial-scale=1">
 <html lang="en">
+    
     <head>
         <title>WickedWx</title>
         <!-- Required meta tags -->
