bruce modal work needs troubleshooting

--- a/index-backup.html
+++ b/index-backup.html
@@ -11,6 +11,22 @@
     <body>
         <header>
             <h1>WickedWx</h1>
+
+            <div class="modal">
+            <div class="modal-background"></div>
+            <div class="modal-content">
+                <p class="image is-4by3">
+                    <img src="./assets/images/stanman.png" alt="Stanley the GOAT">
+                </p>
+            </div>
+            <button class="modal-close is-large" aria-label="close"></button>
+            </div>
+                <center>
+            <button class="js-modal-trigger" data-target= <img src="./assets/images/stanman.png" alt="Stanlet the GOAT">
+            Click me if you dare    
+            </button>
+                </center>
+
             <div class="dropdown citycard">
                 <div class="dropdown-trigger">
                     <button class="button" aria-haspopup="true" aria-controls="dropdown-menu3">
