Edit for javascript pull

--- a/index-backup.html
+++ b/index-backup.html
@@ -23,7 +23,7 @@
             </div>
                 <center>
             <button class="js-modal-trigger" data-target= <img src="./assets/images/stanman.png" alt="Stanlet the GOAT">
-            Click me if you dare    
+            Click me!    
             </button>
                 </center>
 
