html pulling JS code

--- a/index-backup.html
+++ b/index-backup.html
@@ -104,6 +104,7 @@
             </div>
         </main>
         <br>
+        <script src="script.js"></script>
     </body>
     <footer>
         <p>Made in Collaboration by:</p>
