--- a/index-backup.html
+++ b/index-backup.html
@@ -22,7 +22,7 @@
             <button class=" modal-close is-large" aria-label="close"></button>
             </div>
                 <center>
-            <button class="js-modal-trigger" data-target= <img src="./assets/images/stanman.png" alt="Stanlet the GOAT">
+            <button class="js-modal-trigger" data-target= img src="./assets/images/stanman.png" alt="Stanlet the GOAT">
             Click me!    
             </button>
                 </center>
