tried doing the modal again to no avail, centered the raindrop in the div, and added some css for the footer

--- a/index-backup.html
+++ b/index-backup.html
@@ -11,21 +11,20 @@
     <body>
         <header>
             <h1>WickedWx</h1>
-
-            <div class="modal">
-                <div class="modal-background"></div>
-                <div class="modal-content">
-                    <p class="image is-4by3">
-                        <img src="./assets/images/stanman.png" alt="Stanley the GOAT">
-                    </p>
-                </div>
-            <button class=" modal-close is-large" aria-label="close"></button>
-            </div>
-                <center>
-            <button class="js-modal-trigger" data-target= <img src="./assets/images/stanman.png" alt="Stanlet the GOAT">
-            Click me if you dare    
-            </button>
-                </center>
+            <center>
+            <button class="js-modal-trigger" data-target="modal-content">
+                Click Me
+               </button>
+            </center>
+           <div class="modal">
+            <div class="modal-background"></div>
+            <div class="modal-content">
+                <p class="image-is24x24">
+                    <img src="./assets/images/stanman.png" alt="Stanley">
+                </p>
+           </div>
+           <button class="modal-close is-large" aria-label="close"></button>
+           </div>
 
             <div class="citycard">
                 <div class="select is-link is-large is-focused">
@@ -65,6 +64,7 @@
                         <div class="media-content">
                             <p class="title is-2 has-text-black">Humidity</p>
                             <p class="subtitle is-4 has-text-black" id="rtHumidity"></p>
+                            <div></div>    
                         </div>
                     </div>
                     <div class="media">
