--- a/index-backup.html
+++ b/index-backup.html
@@ -14,20 +14,20 @@
             <center>
             <button class="js-modal-trigger button is-warning is-large is-inverted is-focused" data-target="modal-content">
                 Click Me
-               </button>
+            </button>
             </center>
-           <div class="modal">
+            <div class="modal">
             <div class="modal-background"></div>
             <div class="modal-content">
                 <p class="image-is24x24">
                     <img src="./assets/images/stanman.png" alt="Stanley">
                 </p>
-           </div>
-           <button class="modal-close is-large" aria-label="close"></button>
-           </div>
+            </div>
+            <button class="modal-close is-large" aria-label="close"></button>
+            </div>
 
             <div class="citycard">
-                <div class="select is-warning is-large is-focused">
+                <div class="select is-warning is-large">
                     <select id="dropdownMenu">
                         <option> What's Your City? </option>
                         <option value="boston"> Boston </option>
@@ -44,63 +44,67 @@
         <main>
             <div class="datacard card">
                 <header class="card-header">
-                    <p class="title is-1 has-text-black card-header-title is-underlined" id="displayCity"> City Name </p>
+                    <p class="has-text-black title card-header-title is-1 is-underlined" id="displayCity"> City </p>
                     <div></div>
                 </header>
-                <div class="card-content">
-                    <div class="media">
+                <div class="card-content has-text-centered">
+                    <div class="box">
                         <div class="media-left">
-                            <figure class="image is-48x48">
+                            <figure class="image is-96x96">
                                 <img src="./assets/images/thermometer_icon.png" alt="thermometer icon">
                             </figure>
                         </div>
-                        <div class="media-content">
-                            <p class="title is-2 has-text-black">Temperature</p>
-                            <p class="title is-4 has-text-black" id="rtTemp"></p>
+                        <div class="content">
+                            <p class="title is-3">Temperature</p>
+                            <p class="title is-4" id="rtTemp"> test </p>
                         </div>
                     </div>
-                    <div class="media">
+
+                    <div class="box">
                         <div class="media-left">
-                            <figure class="image is-32x32">
+                            <figure class="image is-48x48">
                                 <img src="./assets/images/humidity_icon.png" alt="water drop">
                             </figure>
                         </div>
-                        <div class="media-content">
-                            <p class="title is-2 has-text-black">Humidity</p>
-                            <p class="title is-4 has-text-black" id="rtHumidity"></p>
+                        <div class="content">
+                            <p class="title is-3">Humidity</p>
+                            <p class="title is-4" id="rtHumidity"> test </p>
                         </div>
                     </div>
-                    <div class="media">
+
+                    <div class="box">
                         <div class="media-left">
-                            <figure class="image is-48x48">
+                            <figure class="image is-96x96">
                                 <img src="./assets/images/feelslike_icon.png" alt="fever emoji">
                             </figure>
                         </div>
-                        <div class="media-content">
-                            <p class="title is-2 has-text-black">Feels Like</p>
-                            <p class="title is-4 has-text-black" id="rtTempApp"></p>
+                        <div class="content">
+                            <p class="title is-3">Feels Like</p>
+                            <p class="title is-4" id="rtTempApp"> test </p>
                         </div>
                     </div>
-                    <div class="media">
+
+                    <div class="box">
                         <div class="media-left">
-                            <figure class="image is-48x48">
+                            <figure class="image is-96x96">
                                 <img src="./assets/images/precipitation_icon.png" alt="rain cloud">
                             </figure>
                         </div>
-                        <div class="media-content">
-                            <p class="title is-2 has-text-black">Chance of Precipitation</p>
-                            <p class="title is-4 has-text-black" id="rtPrec"></p>
+                        <div class="content">
+                            <p class="title is-3">Chance of Precipitation</p>
+                            <p class="title is-4" id="rtPrec"> test </p>
                         </div>
                     </div>
-                    <div class="media">
+
+                    <div class="box">
                         <div class="media-left">
-                            <figure class="image is-48x48">
+                            <figure class="image is-96x96">
                                 <img src="./assets/images/sun_icon.png" alt="sun emoji">
                             </figure>
                         </div>
-                        <div class="media-content">
-                            <p class="title is-2 has-text-black">UV Index</p>
-                            <p class="title is-4 has-text-black" id="rtUV"></p>
+                        <div class="content">
+                            <p class="title is-3">UV Index</p>
+                            <p class="title is-4" id="rtUV"> test </p>
                         </div>
                     </div>
                 </div>
