--- a/index-backup.html
+++ b/index-backup.html
@@ -26,8 +26,7 @@
             <button class="modal-close is-large" aria-label="close"></button>
             </div>
                 <center>
-            <button class="js-modal-trigger" data-target= <img src="./assets/images/stanman.png" alt="Stanlet the GOAT">
-            Click me if you dare    
+            <button class="js-modal-trigger" data-target= <img src="./assets/images/stanman.png" alt="Stanley the GOAT">    
             </button>
                 </center>
 
