--- a/index-backup.html
+++ b/index-backup.html
@@ -14,8 +14,8 @@
             <center>
             <button class="js-modal-trigger button is-warning is-large is-inverted is-focused" data-target="modal-content">
                 Click Me
-            </button>
             </center>
+            </button>
             <div class="modal">
             <div class="modal-background"></div>
             <div class="modal-content">
@@ -26,7 +26,7 @@
             <button class="modal-close is-large" aria-label="close"></button>
             </div>
                 <center>
-            <button class="js-modal-trigger" data-target= <img src="./assets/images/stanman.png" alt="Stanley the GOAT">    
+            <button class="js-modal-trigger" data-target=  img src="./assets/images/stanman.png" alt="Stanley the GOAT">    
             </button>
                 </center>
 
