cleaned up modal, edited placement and sizing

--- a/index-backup.html
+++ b/index-backup.html
@@ -24,9 +24,8 @@
                   <div class="modal-content animate-zoom">
                    
                     <center>
-                    <img src="./assets/images/stanman.png" style="width:500px; height:20%">
-                    </center>
-                   
+                    <img src="./assets/images/stanman.png" style="vertical-align: middle;margin:165px 0px">
+                    </center> 
                   </div>
                 </div>
               </div>
