jacob: got API event listener to workgit status!

--- a/index-backup.html
+++ b/index-backup.html
@@ -32,7 +32,7 @@
             <div class="citycard">
                 <form>
                     <div class="select is-warning">
-                        <select id="dropdownMenu"  class="">
+                        <select id="dropdownMenu">
                             <option> What's Your City? </option>
                             <option value="boston"> Boston </option>
                             <option value="daytona"> Daytona </option>
