--- a/index-backup.html
+++ b/index-backup.html
@@ -58,7 +58,7 @@
                         </div>
                         <div class="content">
                             <p class="title is-3">Temperature</p>
-                            <p class="title is-4" id="rtTemp"> test </p>
+                            <p class="title is-4" id="rtTemp"> </p>
                         </div>
                     </div>
 
@@ -70,7 +70,7 @@
                         </div>
                         <div class="content">
                             <p class="title is-3">Humidity</p>
-                            <p class="title is-4" id="rtHumidity"> test </p>
+                            <p class="title is-4" id="rtHumidity"> </p>
                         </div>
                     </div>
 
@@ -82,7 +82,7 @@
                         </div>
                         <div class="content">
                             <p class="title is-3">Feels Like</p>
-                            <p class="title is-4" id="rtTempApp"> test </p>
+                            <p class="title is-4" id="rtTempApp"> </p>
                         </div>
                     </div>
 
@@ -94,7 +94,7 @@
                         </div>
                         <div class="content">
                             <p class="title is-3">Chance of Precipitation</p>
-                            <p class="title is-4" id="rtPrec"> test </p>
+                            <p class="title is-4" id="rtPrec"> </p>
                         </div>
                     </div>
 
@@ -106,7 +106,7 @@
                         </div>
                         <div class="content">
                             <p class="title is-3">UV Index</p>
-                            <p class="title is-4" id="rtUV"> test </p>
+                            <p class="title is-4" id="rtUV"> </p>
                         </div>
                     </div>
                 </div>
