--- a/index-backup.html
+++ b/index-backup.html
@@ -6,7 +6,6 @@
         <title>WickedWx</title>
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@1.0.2/css/bulma.min.css">
         <link rel="stylesheet" href="./css/styles.css">
-        <script src="./script.js"></script>
     </head>
     <body>
         <header>
@@ -118,5 +117,6 @@
             <p>Sarah Stewart, Matthew Franklin, Bruce Millspaugh, Margaux Glovier, Jacob Garland</p>
             <p>With resources from: Tomorrow.io Weather API</p>
         </footer>
+        <script src="script.js"></script>
     </body>
 </html>
