--- a/index-backup.html
+++ b/index-backup.html
@@ -6,6 +6,7 @@
         <title>WickedWx</title>
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@1.0.2/css/bulma.min.css">
         <link rel="stylesheet" href="./css/styles.css">
+        <script src="./script.js"></script>
     </head>
     <body>
         <header>
