I dont remember lol

--- a/index-backup.html
+++ b/index-backup.html
@@ -6,7 +6,6 @@
         <title>WickedWx</title>
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@1.0.2/css/bulma.min.css">
         <link rel="stylesheet" href="./css/styles.css">
-        <script src="./script.js"></script>
     </head>
     <body>
         <header>
@@ -110,7 +109,7 @@
                         </div>
                         <div class="content">
                             <p class="title is-3">UV Index</p>
-                            <p class="title is-4" id="rtUV"> test </p>
+                            <p class="title is-4" id="rtUV"> </p>
                         </div>
                     </div>
                 </div>
@@ -124,5 +123,6 @@
                 <a href="https://www.tomorrow.io/" class="">With resources from Tomorrow.io Weather API</a>
             </div>
         </footer>
+        <script src="./script.js"></script>
     </body>
 </html>
