Test text removed

--- a/index-backup.html
+++ b/index-backup.html
@@ -74,7 +74,7 @@
                         </div>
                         <div class="content">
                             <p class="title is-3">Humidity</p>
-                            <p class="title is-4" id="rtHumidity"> test </p>
+                            <p class="title is-4" id="rtHumidity"> </p>
                         </div>
                     </div>
 
@@ -86,7 +86,7 @@
                         </div>
                         <div class="content">
                             <p class="title is-3">Feels Like</p>
-                            <p class="title is-4" id="rtTempApp"> test </p>
+                            <p class="title is-4" id="rtTempApp"> </p>
                         </div>
                     </div>
 
@@ -98,7 +98,7 @@
                         </div>
                         <div class="content">
                             <p class="title is-3">Chance of Precipitation</p>
-                            <p class="title is-4" id="rtPrec"> test </p>
+                            <p class="title is-4" id="rtPrec"> </p>
                         </div>
                     </div>
 
