Changed Options to average temp ect

--- a/index-backup.html
+++ b/index-backup.html
@@ -60,7 +60,7 @@
                             </figure>
                         </div>
                         <div class="content">
-                            <p class="title is-3">Temperature</p>
+                            <p class="title is-3">Average High Temperature</p>
                             <p class="title is-4" id="rtTemp"> <href src="https://api.weatherstack.com/current?access_key={9dda21169e1e7bf39cf63444df1ab946}"></href>
                             </p>
                         </div>
@@ -73,7 +73,7 @@
                             </figure>
                         </div>
                         <div class="content">
-                            <p class="title is-3">Humidity</p>
+                            <p class="title is-3">Average Humidity</p>
                             <p class="title is-4" id="rtHumidity"> </p>
                         </div>
                     </div>
@@ -85,7 +85,7 @@
                             </figure>
                         </div>
                         <div class="content">
-                            <p class="title is-3">Feels Like</p>
+                            <p class="title is-3">Average Feels Like Temperature</p>
                             <p class="title is-4" id="rtTempApp"> </p>
                         </div>
                     </div>
@@ -97,7 +97,7 @@
                             </figure>
                         </div>
                         <div class="content">
-                            <p class="title is-3">Chance of Precipitation</p>
+                            <p class="title is-3">Average Monthly Rain Fall</p>
                             <p class="title is-4" id="rtPrec"> </p>
                         </div>
                     </div>
@@ -109,7 +109,7 @@
                             </figure>
                         </div>
                         <div class="content">
-                            <p class="title is-3">UV Index</p>
+                            <p class="title is-3">Average UV Index</p>
                             <p class="title is-4" id="rtUV"> </p>
                         </div>
                     </div>
